fix: resolved CLS issue due to desktop menu flashing on mobile view

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -2358,14 +2358,6 @@ body .entry-content .wp-block-latest-posts li {
  * AST HF Builder - Responsive CSS.
  * For desktop view.
  */
-#ast-mobile-header {
-  display: none;
-}
-
-.ast-header-break-point #ast-desktop-header {
-  display: none;
-}
-
 .ast-header-break-point #ast-mobile-header {
   display: block;
 }
